--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   intl: ^0.15.8
   url_launcher: ^5.1.2
   flutter_local_notifications: ^1.4.1
+  rxdart: ^0.24.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,6 +36,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.4
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "dev_assets/app_icon.png"
+  adaptive_icon_foreground: "dev_assets/app_icon.png"
 
 
 # For information on the generic Dart part of this file, see the
